--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,21 @@ iframe#tela{
     width: 270px;
     height: 471px;
 }
+
+
+section#redes-sociais {
+    text-align: left;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px black;
+}
+
+section#redes-sociais img:hover{
+    border: 5px solid white;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px black;
+    transition: transforme, 2s border 0.5s;
+}
