--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,6 +46,7 @@ section#redes-sociais img{
     margin: 20px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px black;
+    text-align: center;
 }
 
 section#redes-sociais img:hover{
